--- a/index.html
+++ b/index.html
@@ -34,15 +34,29 @@
             <span class="menu-lines"><span></span></span>
           </button>
           <div class="collapse navbar-collapse" id="mainNavigation">
-            <ul class="navbar-nav mx-auto">
+            <ul class="navbar-nav ml-auto">
               <li class="nav__item">
                 <a href="index.html"  class="nav__item-link">Home</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="about-us.html"  class="nav__item-link">About Us</a>
               </li><!-- /.nav-item -->
-              <li class="nav__item">
-                <a href="services.html"  class="nav__item-link">Services</a>
+              <li class="nav__item has-dropdown">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Services</a>
+                <ul class="dropdown-menu">
+                  <li class="nav__item">
+                    <a href="services.html" class="nav__item-link">Entrance Automation</a>
+                  </li><!-- /.nav-item -->
+                  <li class="nav__item">
+                    <a href="services.html" class="nav__item-link"> Surveillance Camera Systems</a>
+                  </li><!-- /.nav-item -->
+                  <li class="nav__item">
+                    <a href="services.html" class="nav__item-link">IT Infrastructure Solutions</a>
+                  </li><!-- /.nav-item -->
+                  <li class="nav__item">
+                    <a href="services.html" class="nav__item-link">Safety & Security Systems</a>
+                  </li><!-- /.nav-item -->
+                </ul><!-- /.dropdown-menu -->
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="project.html"  class="nav__item-link">Projects</a>
@@ -324,10 +338,10 @@
                 <div class="service__icon">
                   <i class="icon-cctv-camera2"></i>
                 </div><!-- /.service__icon -->
-                <h4 class="service__title">Smarter Business Security </h4>
-                <p class="service__desc">Clever security system connects your security, CCTV, lights, locks and more,
-                  for true seamless automation and control.
-                </p>
+                <h4 class="service__title">Surveillance Camera Systems</h4>
+                <p class="service__desc">Enhance your security with our clever surveillance camera systems. Connect your security, CCTV, 
+                  lights, locks, and more for seamless automation and control.</p>
+
                 <a href="services.html" class="btn btn__primary  btn__link">
                   <i class="icon-arrow-right icon-filled"></i>
                   <span>Read More</span>
@@ -343,19 +357,20 @@
             <div class="service-item">
               <div class="service__body">
                 <div class="service__icon">
-                  <i class="icon-fire-alarm"></i>
+                  
+                  <i class="icon-smart-control"></i>
                 </div><!-- /.service__icon -->
-                <h4 class="service__title">Fire Detection & <br> Life Safety</h4>
-                <p class="service__desc">We're industry leaders in the design, installation of quality fire alarm and
-                  provide systems enhance security and ensure...
-                </p>
+                <h4 class="service__title">Entrance Automation</h4>
+                <p class="service__desc">Experience industry-leading design and installation of quality fire alarm systems 
+                  that enhance security and ensure safety for your premises.</p>
+
                 <a href="services.html" class="btn btn__primary btn__link">
                   <i class="icon-arrow-right icon-filled"></i>
                   <span>Read More</span>
                 </a>
               </div><!-- /.service__body -->
               <div class="service__img">
-                <div class="bg-img"><img src="assets/images/services/8.jpg" alt="service"></div>
+                <div class="bg-img"><img src="assets/images/services/10.jpg" alt="service"></div>
               </div><!-- /.service__img -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
@@ -366,10 +381,10 @@
                 <div class="service__icon">
                   <i class="icon-home-automation"></i>
                 </div><!-- /.service__icon -->
-                <h4 class="service__title">Smart Home Systems</h4>
-                <p class="service__desc">Whether you’re home or away, we make smart simple, have a remote access and
-                  control everything from lights, locks,...
-                </p>
+                <h4 class="service__title">IT Infrastructure Solutions</h4>
+                <p class="service__desc">Enjoy smart and simple IT infrastructure solutions that allow remote access and control of 
+                  everything from lights to locks, whether you're at home or away.</p>
+
                 <a href="services.html" class="btn btn__primary  btn__link">
                   <i class="icon-arrow-right icon-filled"></i>
                   <span>Read More</span>
@@ -385,19 +400,19 @@
             <div class="service-item">
               <div class="service__body">
                 <div class="service__icon">
-                  <i class="icon-smart-control"></i>
+                  <i class="icon-fire-alarm"></i>
                 </div><!-- /.service__icon -->
-                <h4 class="service__title">Access Control Installation</h4>
-                <p class="service__desc">Effective and simple-to-use door access control systems, we offer a decade of
-                  experience in planning, customizing...
-                </p>
+                <h4 class="service__title">Safety & Security Systems</h4>
+                <p class="service__desc">Simplify security with our effective and user-friendly door access control systems. 
+                  Benefit from a decade of experience in planning and customization.</p>
+
                 <a href="services.html" class="btn btn__primary  btn__link">
                   <i class="icon-arrow-right icon-filled"></i>
                   <span>Read More</span>
                 </a>
               </div><!-- /.service__body -->
               <div class="service__img">
-                <div class="bg-img"><img src="assets/images/services/10.jpg" alt="service"></div>
+                <div class="bg-img"><img src="assets/images/services/8.jpg" alt="service"></div>
               </div><!-- /.service__img -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-6 -->
@@ -1085,7 +1100,7 @@
                   <ul class="list-unstyled">
                     <li><a href="about-us.html">About Us</a></li>
                     <li><a href="team.html">Leadership Team</a></li>
-                    <li><a href="blog.html">News & Media</a></li>
+                    <li><a href="services.html">News & Media</a></li>
                     <li><a href="shop.html">Our Products</a></li>
                     <li><a href="reviews.html">Reviews</a></li>
                   </ul>
