--- a/about-us.html
+++ b/about-us.html
@@ -96,13 +96,6 @@
                 Our installation standards and criteria for election of personnel form part of our tightly monitored and controlled quality systems.
 
               </p>
-              <!-- <p class="heading__desc mb-20">Black Cat has a standard call out procedure for each system installed with 24-hr service.
-                 Qualified and trained technicians would respond to the specific project with the necessary tools and stock to attend the faults ,
-                  these would be obtained witin the shortest time. Black Cat undertakes after sales service agreements and pride in the in-depth
-                   knowledge of its product base with central documentation for each project undertaken.
-                    Quality is an element of the attitudes of our technicians that has been carefully nurtured and is evident in the compliments
-                     received from clients.
-              </p> -->
             </div>
           </div><!-- /.col-xl-6 -->
           <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5 offset-xl-1">
@@ -201,9 +194,115 @@
 
 
 
+        <!-- ========================
+      Features layout1
+    ========================== -->
+    <section class="features-layout1">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="heading-layout2 mb-50">
+              <h2 class="heading__subtitle">Tailored Solutions For Your Security Priorities</h2>
+              <h3 class="heading__title">Our Milestones</h3>
+            </div><!-- /heading -->
+          </div><!-- /.col-lg-6 -->
+        </div><!-- /.row -->
+        <div class="row">
+          
+          
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="feature-item">
+              <div class="feature__body">
+                <div class="feature__icon">
+                  <i class="icon-home-automation"></i>
+                </div><!-- /.feature__icon -->
+                <h4 class="feature__title">First Pilot Contractor of KFON Project. 500 Kilometer Fiber Cabling over KSEB Poles Done by BLACK CAT</h4>
+              </div><!-- /.feature__body -->
+            </div><!-- /.feature-item -->
+          </div><!-- /.col-lg-3 -->
+          <!-- feature item #1 -->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="feature-item">
+              <div class="feature__body">
+                <div class="feature__icon">
+                  <i class="icon-smart-control"></i>
+                </div><!-- /.feature__icon -->
+                <h4 class="feature__title"> Completed Projects 3000 Plus
+                </h4>
+              </div><!-- /.feature__body -->
+            </div><!-- /.feature-item -->
+          </div><!-- /.col-lg-3 -->
+          <!-- feature item #2 -->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="feature-item">
+              <div class="feature__body">
+                <div class="feature__icon">
+                  <i class="icon-surveillance"></i>
+                </div><!-- /.feature__icon -->
+                <h4 class="feature__title">Structured Cable Laying 1000 Kilometer Plus</h4>
+              </div><!-- /.feature__body -->
+            </div><!-- /.feature-item -->
+          </div><!-- /.col-lg-3 -->
+          <!-- feature item #3 -->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="feature-item">
+              <div class="feature__body">
+                <div class="feature__icon">
+                  <i class="icon-surveillance2"></i>
+                </div><!-- /.feature__icon -->
+                <h4 class="feature__title"> ISO Certification</h4>
+              </div><!-- /.feature__body -->
+            </div><!-- /.feature-item -->
+          </div><!-- /.col-lg-3 -->
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="feature-item">
+              <div class="feature__body">
+                <div class="feature__icon">
+                  <i class="icon-intrusion"></i>
+                </div><!-- /.feature__icon -->
+                <h4 class="feature__title">Vendors of Central & State Government Organisations</h4>
+              </div><!-- /.feature__body -->
+            </div><!-- /.feature-item -->
+          </div><!-- /.col-lg-3 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.Features-layout1 -->
 
 
-
+    <!-- ======================
+     Clients
+    ========================= -->
+    <section class="clients border-top pt-50 pb-50">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <h4 class="font-weight-bold my-3 text-center">
+              Our Clients
+            </h4>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="slick-carousel"
+              data-slick='{"slidesToShow": 5, "arrows": false, "dots": false, "autoplay": true,"autoplaySpeed": 2000, "infinite": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 3}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 2}}]}'>
+              <div class="client">
+                <img src="assets/images/clients/8.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/9.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/10.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/11.png" alt="client">
+              </div><!-- /.client -->
+              <div class="client">
+                <img src="assets/images/clients/9.png" alt="client">
+              </div><!-- /.client -->
+            </div><!-- /.carousel -->
+          </div><!-- /.col-lg-6 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.Clients -->
 
     <!-- ======================
      Clients
