--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="menu-lines"><span></span></span>
           </button>
           <div class="collapse navbar-collapse" id="mainNavigation">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav mx-auto">
               <li class="nav__item">
                 <a href="index.html"  class="nav__item-link">Home</a>
               </li><!-- /.nav-item -->
@@ -87,7 +87,7 @@
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
                 <div class="slide__content">
-                  <span class="slide__subtitle">Home Security Products Everyone Can Install, Afford, And Use!</span>
+                  <span class="slide__subtitle">ISO Certified 9001:2015 Company</span>
                   <h2 class="slide__title">Smart Security Systems For The Modern World</h2>
                   <p class="slide__desc">We provide security requirements of residential, commercial and other clients,
                     with the largest assortment of security cameras and alarm systems installation.
@@ -103,19 +103,6 @@
                   </div>
                 </div><!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 offset-xl-2 d-none d-xl-block">
-                <div class="cta-banner">
-                  <h4 class="cta__title">Custom Alerts For Friends And Family</h4>
-                  <img src="assets/images/cta/1.jpg" alt="cta__img" class="cta__img">
-                  <p class="cta__desc">Door, window, and Glass Break Detectors designed to monitor and protect home and
-                    family.
-                  </p>
-                  <a href="services.html" class="btn btn__primary btn__link">
-                    <i class="icon-arrow-right icon-filled"></i>
-                    <span>Protect Your Home</span>
-                  </a>
-                </div>
-              </div><!-- /.col-xl-2 -->
             </div><!-- /.row -->
           </div><!-- /.container -->
         </div><!-- /.slide-item -->
@@ -125,7 +112,7 @@
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
                 <div class="slide__content">
-                  <span class="slide__subtitle">Home Security Products Everyone Can Install, Afford, And Use!</span>
+                  <span class="slide__subtitle">ISO Certified 9001:2015 Company</span>
                   <h2 class="slide__title">Best Practices <br> For All Business Security Systems</h2>
                   <p class="slide__desc">We provide security requirements of residential, commercial and other clients,
                     with the largest assortment of security cameras and alarm systems installation.
@@ -141,19 +128,6 @@
                   </div>
                 </div><!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 offset-xl-2 d-none d-xl-block">
-                <div class="cta-banner">
-                  <h4 class="cta__title">Custom Alerts For Friends And Family</h4>
-                  <img src="assets/images/cta/1.jpg" alt="cta__img" class="cta__img">
-                  <p class="cta__desc">Door, window, and Glass Break Detectors designed to monitor and protect home and
-                    family.
-                  </p>
-                  <a href="services.html" class="btn btn__primary btn__link">
-                    <i class="icon-arrow-right icon-filled"></i>
-                    <span>Protect Your Home</span>
-                  </a>
-                </div>
-              </div><!-- /.col-xl-2 -->
             </div><!-- /.row -->
           </div><!-- /.container -->
         </div><!-- /.slide-item -->
