--- a/project.html
+++ b/project.html
@@ -62,34 +62,19 @@
       <div class="header-topbar" id="header-topbar">
         <div class="container  h-100">
           <div class="row h-100 justify-content-end">
-            <div class="col-3 d-flex align-items-center justify-content-end h-100">
-              <div class="phone__number">
-                <div class="phone__icon">
-                  <i class="fas fa-phone"></i>
-                </div>
-                <div>
-                  <a class="phone__link d-block">+91 98955 12222</a>
-                </div>
+            <div class="col-2 d-flex align-items-center justify-content-end h-100">
+              <div class="topbar__text font-weight-bold color-white">
+                <span><i class="fas fa-phone mr-2"></i>+91 98955 12222</span>
               </div>
             </div><!-- /.col-2 -->
-            <div class="col-3 d-flex align-items-center justify-content-end h-100">
-              <div class="phone__number">
-                <div class="phone__icon">
-                  <i class="fas fa-envelope"></i>
-                </div>
-                <div>
-                  <a class="phone__link d-block">info@balckcat.in</a>
-                </div>
+            <div class="col-2 d-flex align-items-center justify-content-end h-100">
+              <div class="topbar__text font-weight-bold color-white">
+                <span><i class="fas fa-envelope mr-2"></i>info@balckcat.in</span>
               </div>
             </div><!-- /.col-2 -->
-            <div class="col-3 d-flex align-items-center justify-content-end h-100">
-              <div class="phone__number">
-                <div class="phone__icon">
-                  <i class="fas fa-envelope"></i>
-                </div>
-                <div>
-                  <a class="phone__link d-block">sales@balckcat.in</a>
-                </div>
+            <div class="col-2 d-flex align-items-center justify-content-end h-100">
+              <div class="topbar__text font-weight-bold color-white">
+                <span><i class="fas fa-envelope mr-2"></i>sales@balckcat.in</span>
               </div>
             </div><!-- /.col-2 -->
             <div class="col-2 d-flex align-items-center justify-content-end h-100">
