--- a/about-us.html
+++ b/about-us.html
@@ -254,7 +254,7 @@
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-12 col-lg-12">
             <h4 class="font-weight-bold my-3 text-center">
-              Our Clients
+              Brands
             </h4>
           </div>
           <div class="col-sm-12 col-md-12 col-lg-12">
@@ -320,10 +320,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-12 col-lg-4">
-            <p class="font-weight-bold my-3">
-              Provide better security and control for residential and business customers.
-              <a href="#" class="text-underlined">Compare Security Options!</a>
-            </p>
+            <h4 class="font-weight-bold my-3 text-center">
+              Projects
+            </h4>
           </div>
           <div class="col-sm-12 col-md-12 col-lg-8">
             <div class="slick-carousel"
