--- a/tmp.html
+++ b/tmp.html
@@ -34,17 +34,18 @@
               </a>
               <div class="nav-toggle"></div>
             </div>
-            <div class="nav-search">
-              <div class="nav-search-button"><i class="nav-search-icon"></i></div>
-              <form>
-                <div class="nav-search-inner">
-                  <input type="search" name="search" placeholder="Search..."/>
-                </div>
-              </form>
-            </div>
             <div class="nav-menus-wrapper">
               <ul class="nav-menu align-to-right">
                   <li><a href="#" class="text-white">Home</a></li>
+                  <li><a href="#" class="text-white">ABOUT</a></li>
+                  <li>
+                    <a href="#"  class="text-white">Surveillance Cameras</a>
+                    <ul class="nav-dropdown">
+                      <li><a href="#" target="_blank">Residential</a></li>
+                      <li><a href="#" target="_blank">Commercial</a></li>
+                      <li><a href="#" target="_blank">Project Series</a></li>
+                    </ul>
+                  </li>
                   <li>
                     <a href="#" class="text-white">Automation</a>
                     <ul class="nav-dropdown">
@@ -128,8 +129,90 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#" class="text-white">Home</a></li>
-                  <li><a href="#" class="text-white">Home</a></li>
+                  <li>
+                    <a href="#" class="text-white">Security & Safety</a>
+                    <ul class="nav-dropdown">
+                      <li>
+                        <a href="#">Home Security</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Burglary Alarm</a></li>
+                          <li><a href="#" target="_blank">Fire Alarm</a></li>
+                          <li><a href="#" target="_blank">Video Door Phone</a></li>
+                          <li><a href="#" target="_blank">Beam Sensor</a></li>
+                          <li><a href="#" target="_blank">Carbon Monoxide Sensor</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Commercial</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Alarm System</a></li>
+                          <li><a href="#" target="_blank">Perimeter Sensor</a></li>
+                          <li><a href="#" target="_blank">Electric Fencing </a></li>
+                          <li><a href="#" target="_blank">Guard Petrol System</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#" class="text-white">IT Services</a>
+                    <ul class="nav-dropdown">
+                      <li>
+                        <a href="#">Structured Cabling</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Network Structural Cabling</a></li>
+                          <li><a href="#" target="_blank">LAN Cable Installation</a></li>
+                          <li><a href="#" target="_blank">Fiber Cable Installation</a></li>
+                          <li><a href="#" target="_blank">Telephone Cabling</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">IT Projects</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Wifi Access Points</a></li>
+                          <li><a href="#" target="_blank">Home IT Solutions</a></li>
+                          <li><a href="#" target="_blank">Digital Signage</a></li>
+                          <li><a href="#" target="_blank">POS Machine</a></li>
+                          <li><a href="#" target="_blank">Cash Counting Machine</a></li>
+                          <li><a href="#" target="_blank">Fake Note Detection Machine</a></li>
+                          <li><a href="#" target="_blank">Billing Software</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Office Mgmt Solutions</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Biometric Devices</a></li>
+                          <li><a href="#" target="_blank">Magnetic Locks</a></li>
+                          <li><a href="#" target="_blank">Safe Lockers</a></li>
+                          <li><a href="#" target="_blank">Readers</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>  
+                  <li>
+                    <a href="#" class="text-white">Industry Solutions</a>
+                    <ul class="nav-dropdown">
+                      <li><a href="#">Education</a>
+                      <ul class="nav-dropdown">
+                        <li><a href="#" target="_blank">Students Attendance</a></li>
+                        <li><a href="#" target="_blank">IFPD</a></li>
+                        <li><a href="#" target="_blank">Access Control</a></li>
+                        <li><a href="#" target="_blank">Entrance & Exit Management</a></li>
+                        <li><a href="#" target="_blank">Perimeter Protection</a></li>
+                        <li><a href="#" target="_blank">Visitor Management</a></li>
+                      </ul>
+                      </li>
+                      <li><a href="#">Energy</a></li>
+                      <li><a href="#">Healthcare</a></li>
+                      <li><a href="#">Logistics</a></li>
+                      <li><a href="#">Manufacturing</a></li>
+                      <li><a href="#">Public Transport</a></li>
+                      <li><a href="#">Retail</a></li>
+                      <li><a href="#">Traffic</a></li>
+                      <li><a href="#">Infrastructure</a></li>
+                      <li><a href="#">Banking & Finance</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#" class="text-white">GALLERY</a></li>
                 </ul>
                 
             </div>
