--- a/project.html
+++ b/project.html
@@ -66,10 +66,40 @@
                     <li>
                       <a href="#"  class="text-white">Surveillance Cameras</a>
                       <ul class="nav-dropdown">
-                        <li><a href="#" target="_blank">Residential</a></li>
-                        <li><a href="#" target="_blank">Commercial</a></li>
-                        <li><a href="#" target="_blank">Project Series</a></li>
+                        <li>
+                          <a href="#">Residential</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">HD Cameras</a></li>
+                            <li><a href="#" target="_blank">IP Cameras</a></li>
+                            <li><a href="#" target="_blank">DVR</a></li>
+                            <li><a href="#" target="_blank">NVR</a></li>
+                            <li><a href="#" target="_blank">WiFi Cameras</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <a href="#">Commercial</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">IP Cameras</a></li>
+                            <li><a href="#" target="_blank">PTZ Cameras</a></li>
+                            <li><a href="#" target="_blank">Solar Cameras</a></li>
+                            <li><a href="#" target="_blank">Box Cameras</a></li>
+                            <li><a href="#" target="_blank">Storage Devices</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <a href="#">Project Series</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Mobile DVR</a></li>
+                            <li><a href="#" target="_blank">Enforcement Cameras</a></li>
+                            <li><a href="#" target="_blank">AI Cameras</a></li>
+                            <li><a href="#" target="_blank">ANPR Cameras</a></li>
+                            <li><a href="#" target="_blank">Face Recognition</a></li>
+                            <li><a href="#" target="_blank">Thermal Cameras</a></li>
+                            <li><a href="#" target="_blank">Panoramic Cameras</a></li>
+                          </ul>
+                        </li>
                       </ul>
+                      
                     </li>
                     <li>
                       <a href="#" class="text-white">Automation</a>
@@ -226,15 +256,85 @@
                           <li><a href="#" target="_blank">Visitor Management</a></li>
                         </ul>
                         </li>
-                        <li><a href="#">Energy</a></li>
-                        <li><a href="#">Healthcare</a></li>
-                        <li><a href="#">Logistics</a></li>
-                        <li><a href="#">Manufacturing</a></li>
-                        <li><a href="#">Public Transport</a></li>
-                        <li><a href="#">Retail</a></li>
-                        <li><a href="#">Traffic</a></li>
-                        <li><a href="#">Infrastructure</a></li>
-                        <li><a href="#">Banking & Finance</a></li>
+                        <li><a href="#">Energy</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Intelligent Monitoring</a></li>
+                            <li><a href="#" target="_blank">Industrial Automation</a></li>
+                            <li><a href="#" target="_blank">Process Monitoring</a></li>
+                            <li><a href="#" target="_blank">Access Control</a></li>
+                            <li><a href="#" target="_blank">Entrance & Exit Management</a></li>
+                            <li><a href="#" target="_blank">Perimeter Protection</a></li>
+                            <li><a href="#" target="_blank">Visitor Management</a></li>
+                            <li><a href="#" target="_blank">Solar Powered Security Equipments</a></li>
+                          </ul></li>
+                        <li><a href="#">Healthcare</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Hospitals</a></li>
+                            <li><a href="#" target="_blank">Clinics</a></li>
+                            <li><a href="#" target="_blank">Medical Units</a></li>
+                            <li><a href="#" target="_blank">Ambulance</a></li>
+                            <li><a href="#" target="_blank">Medical Camps</a></li>
+                          </ul></li>
+                        <li><a href="#">Logistics</a>
+                        <ul class="nav-dropdown">
+                          <li><a href="#" target="_blank">Vehicle Tracking</a></li>
+                          <li><a href="#" target="_blank">Line Haul Management</a></li>
+                          <li><a href="#" target="_blank">Parcel Tracking</a></li>
+                          <li><a href="#" target="_blank">Dock Management</a></li>
+                          <li><a href="#" target="_blank">Access Control</a></li>
+                          <li><a href="#" target="_blank">Entrance & Exit Management</a></li>
+                          <li><a href="#" target="_blank">Perimeter Protection</a></li>
+                          <li><a href="#" target="_blank">Time Attendance</a></li>
+                          <li><a href="#" target="_blank">Visitor Management</a></li>
+                        </ul></li>
+                        <li><a href="#">Manufacturing</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Access Control</a></li>
+                            <li><a href="#" target="_blank">Door Automation</a></li>
+                            <li><a href="#" target="_blank">Dock Management</a></li>
+                            <li><a href="#" target="_blank">Entrance & Exit Management</a></li>
+                            <li><a href="#" target="_blank">Perimeter Protection</a></li>
+                            <li><a href="#" target="_blank">Solar Powered Solutions</a></li>
+                            <li><a href="#" target="_blank">Shutter Automation</a></li>
+                          </ul></li>
+                        <li><a href="#">Public Transport</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Bus Surveillance</a></li>
+                            <li><a href="#" target="_blank">GPS Tracking</a></li>
+                          </ul></li>
+                        <li><a href="#">Retail</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Supermarkets</a></li>
+                            <li><a href="#" target="_blank">Shopping Malls</a></li>
+                            <li><a href="#" target="_blank">Parking Lots</a></li>
+                            <li><a href="#" target="_blank">Dealership Points</a></li>
+                            <li><a href="#" target="_blank">Gas/Service Stations</a></li>
+                          </ul></li>
+                        <li><a href="#">Traffic</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Enforcement Cameras</a></li>
+                            <li><a href="#" target="_blank">Speed Detection Systems</a></li>
+                            <li><a href="#" target="_blank">Violation Detection Cameras</a></li>
+                            <li><a href="#" target="_blank">RFID Cameras</a></li>
+                            <li><a href="#" target="_blank">GPS Tracking</a></li>
+                          </ul></li>
+                        <li><a href="#">Infrastructure</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Surveillance System</a></li>
+                            <li><a href="#" target="_blank">Access Control</a></li>
+                            <li><a href="#" target="_blank">Door Automation</a></li>
+                            <li><a href="#" target="_blank">Structured Cabling</a></li>
+                            <li><a href="#" target="_blank">Fiber Laying & Splicing</a></li>
+                          </ul></li>
+                        <li><a href="#">Banking & Finance</a>
+                          <ul class="nav-dropdown">
+                            <li><a href="#" target="_blank">Access Control</a></li>
+                            <li><a href="#" target="_blank">CCTV Surveillance</a></li>
+                            <li><a href="#" target="_blank">Electronic Lockers</a></li>
+                            <li><a href="#" target="_blank">ATM Alarm Systems</a></li>
+                            <li><a href="#" target="_blank">Intercomm Communication</a></li>
+                            <li><a href="#" target="_blank">Video Conferencing System</a></li>
+                          </ul></li>
                       </ul>
                     </li>
                     <li><a href="#" class="text-white">GALLERY</a></li>
@@ -449,12 +549,11 @@
     </form>
   </div><!-- /. search-popup -->
 
-  <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/dropdown.js"></script>
 </body>
 
 
-<!-- Mirrored from akinoz.com/demos/BlackCat/case-study-grid.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Nov 2023 13:18:37 GMT -->
 </html>
